[package]
name = "orbit-commission"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orbit_commission"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
product = {git = "https://github.com/OrbitEng/product"}
transaction = {git = "https://github.com/OrbitEng/transaction"}
market-accounts =  {git = "https://github.com/OrbitEng/accounts", features=["cpi"]}
orbit-catalog = {git = "https://github.com/OrbitEng/catalog", features = ["cpi"]}
orbit-multisig = {git = "https://github.com/OrbitEng/multisig", features=["no-entrypoint"]}
orbit-addresses = {git = "https://github.com/OrbitEng/addresses"}
market-macros = {git = "https://github.com/OrbitEng/market-macros"}